--- a/.github/workflows/js.yaml
+++ b/.github/workflows/js.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x, 16.x]
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: [ubuntu-latest, macos-12, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Set up Node.js ${{ matrix.node-version }}
